	(__idna_to_unicode_lzlz): Likewise.
	(_res_hconf_init): Likewise.

	* scripts/check-local-headers.sh: Replace */*.{o,os,oS}.d with
	*/*.o*.d.

	* elf/Makefile (tests): Add tst-tls9, $(objpfx)noload-mem
	and $(objpfx)tst-unused-dep.out only if $(build-shared) is yes.
	* sysdeps/x86_64/Makefile (tests): Add tst-quad1, tst-quad2,
	$(objpfx)tst-xmmymm.out only if $(build-shared) is yes.

2012-09-06  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14544]
	* Makeconfig (link-static-before-libc): Replace $(+prector)
	with $(+prectorT).
	(link-static-after-libc): Replace $(+postctor) with
	$(+postctorT).
	(link-bounded): Replace $(+prector)/$(+postctor) with
	$(+prectorT)/$(+postctorT).
	(+prectorT): New macro.
	(+postctorT): Likewise.

2012-09-06  Joseph Myers  <joseph@codesourcery.com>

	* stdlib/gen-tst-strtod-round.c: Include <assert.h>.
	(round_str): Handle values above the maximum for IBM long double
	as inexact.
	* stdlib/tst-strtod-round.c (tests): Regenerated.

2012-09-06  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/s390/s390-32/multiarch/Makefile: Remove -mzarch
	assembler flag.
	* sysdeps/s390/s390-32/multiarch/memcmp.S: Use .machinemode
	zarch_nohighgprs around the zarch optimized routines.
	* sysdeps/s390/s390-32/multiarch/memcpy.S: Likewise.
	* sysdeps/s390/s390-32/multiarch/memset.S: Likewise.
	* sysdeps/s390/s390-32/multiarch/ifunc-resolve.c: Explicitly check
	for zarch.

2012-09-05  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Update.

	* sysdeps/sparc/bits/hwcap.h (HWCAP_SPARC_PAUSE,
	HWCAP_SPARC_CBCOND, HWCAP_SPARC_CRYPTO): Define.
	* sysdeps/sparc/dl-procinfo.h (_DL_HWCAP_COUNT): Increase to 27.
	* sysdeps/sparc/dl-procinfo.c (_dl_sparc_cap_flags): Add new
	entries.

2012-09-05  Alexandre Oliva  <aoliva@redhat.com>

	* malloc/arena.c: Fold copyright years.
	* malloc/mcheck.c, malloc/memusage.c: Likewise.

2012-09-05  Alexandre Oliva  <aoliva@redhat.com>
